<resources>
    <string name="app_name">Assessment</string>
    <string name="read_india">Read India</string>
    <string name="hybrid_learning">Hybrid Learning</string>
    <string name="second_chance">Second Chance</string>
    <string name="ECE">ECE</string>
    <string name="pratham_institute">Pratham Institute</string>
    <string name="urbon_program">Urban programme</string>
    <string name="age">Age :</string>
    <string-array name="student_class">
        <item>Select Class</item>
        <item> 1  </item>
        <item> 2  </item>
        <item> 3  </item>
        <item> 4  </item>
        <item> 5  </item>
        <item> 6  </item>
        <item> 7  </item>
        <item> 8  </item>
        <item> 9  </item>
        <item> 10 </item>
        <item> 11 </item>
        <item> 12 </item>
    </string-array>
    <string-array name="india_states">
        <item>SELECT STATE</item>
        <item>Andhra Pradesh(AP)</item>
        <item>Arunachal Pradesh(AR)</item>
        <item>Assam(AS)</item>
        <item>Bihar(BR)</item>
        <item>Chhattisgarh(CG)</item>
        <item>Goa(GA)</item>
        <item>Gujarat(GJ)</item>
        <item>Haryana(HR)</item>
        <item>Himachal Pradesh(HP)</item>
        <item>Jammu and kashmir(JK)</item>
        <item>Jharkhand(JH)</item>
        <item>Karnataka(KN)</item>
        <item>Kerala(KL)</item>
        <item>Madhya Pradesh(MP)</item>
        <item>Maharashtra(MH)</item>
        <item>Manipur(MN)</item>
        <item>Meghalaya(ML)</item>
        <item>Mizoram(MZ)</item>
        <item>Nagaland(NL)</item>
        <item>Orissa(OR)</item>
        <item>Punjab(PB)</item>
        <item>Rajasthan(RJ)</item>
        <item>Sikkim(SK)</item>
        <item>Tamil Nadu(TN)</item>
        <item>Telangana(TS)</item>
        <item>Tripura(TR)</item>
        <item>Uttarakhand(UK)</item>
        <item>Uttar Pradesh(UP)</item>
        <item>West Bengal(WB)</item>
        <item>Andaman and Nicobar Islands(AN)</item>
        <item>Chandigarh(CH)</item>
        <item>Dadra and Nagar Haveli(DH)</item>
        <item>Daman and Diu(DD)</item>
        <item>Delhi(DL)</item>
        <item>Lakshadweep(LD)</item>
        <item>Pondicherry(PY)</item>
    </string-array>
    <string-array name="india_states_shortcode">
        <item>SELECT STATE</item>
        <item>AP</item>
        <item>AR</item>
        <item>AS</item>
        <item>BR</item>
        <item>CG</item>
        <item>GA</item>
        <item>GJ</item>
        <item>HR</item>
        <item>HP</item>
        <item>JK</item>
        <item>JH</item>
        <item>KN</item>
        <item>KL</item>
        <item>MP</item>
        <item>MH</item>
        <item>MN</item>
        <item>ML</item>
        <item>MZ</item>
        <item>NL</item>
        <item>OR</item>
        <item>PB</item>
        <item>RJ</item>
        <item>SK</item>
        <item>TN</item>
        <item>TS</item>
        <item>TR</item>
        <item>UK</item>
        <item>UP</item>
        <item>WB</item>
        <item>AN</item>
        <item>CH</item>
        <item>DH</item>
        <item>DD</item>
        <item>DL</item>
        <item>LD</item>
        <item>PY</item>
    </string-array>
    <string-array name="certificate_Languages">
        <item>English</item>
        <item>Hindi</item>
        <item>Marathi</item>
        <item>Gujarati</item>
        <item>Kannada</item>
        <item>Bengali</item>
        <item>Assamese</item>
        <item>Telugu</item>
        <item>Tamil</item>
        <item>Odia</item>
        <item>Urdu</item>
        <item>Punjabi</item>
    </string-array>
    <string name="checked_text">Supervisor Mode</string>
    <string name="unchecked_text">Practice Mode</string>
    <string name="thank_you_for_giving_assessment">Thank you participating in the assessment.</string>
    <string name="video_monitoring_is">Video monitoring is on</string>
    <string name="view_hint">View text</string>
    <string name="profile_name">Profile Name</string>
    <string name="time">time : </string>
    <string name="total">Total</string>
    <string name="assign_groups">Assign Groups</string>
    <string name="assign">Assign</string>
    <string name="oops_something_went_wrong">Oops, Something went wrong!!</string>
    <string name="sorry_about_that_press_the_report_button_to_send_the_error_to_us">Sorry about that. Press the report button to send the error to us.</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="scan_qr">Scan QR</string>
    <string name="student_name">Student Name :</string>
    <string name="scan_new">Scan New</string>
    <string name="start">Start</string>
    <string name="exam_name">Exam Name : </string>
    <string name="total_questions">Total questions : </string>
    <string name="note_pictures_of_the_appearing_student_will_be_captured_during_the_exam">Note: Pictures of the appearing student \n will be captured during the exam.</string>
    <string name="prev">Prev</string>
    <string name="pratham_n_assessments">Pratham\nAssessments</string>
    <string name="enter_supervisor_name">Enter supervisor name</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="clear">Clear</string>
    <string name="please_wait_pushing_data">Please wait, pushing Data…</string>
    <string name="check_your_wifi_is_connected_to_pratham_kolibri">Check your wifi is connected to Pratham Kolibri !</string>
    <string name="eject_otg">Eject OTG</string>
    <string name="practice">Practice</string>
    <string name="time_s_up">Time\'s Up..!</string>
    <string name="ok">OK</string>
    <string name="problem_downloading_file">Problem Downloading File</string>
    <string name="what_do_you_want_to_do">What do you want to do?</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter Name</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="language">Language :</string>
    <string name="select_avatar">Select Avatar :</string>
    <string name="save_profile">Save Profile</string>
    <string name="marks">Marks :</string>
    <string name="total_marks">Total marks</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="skipped">Skipped</string>
    <string name="total_time">Total time</string>
    <string name="time_taken">Time taken</string>
    <string name="certificates">Certificates..</string>
    <string name="you_have_earned">you have earned</string>
    <string name="student_name_">Student Name :</string>
    <string name="age_">Age :</string>
    <string name="class_">Class :</string>
    <string name="gender_">Gender :</string>
    <string name="group_id">Group Id :</string>
    <string name="group_name">Group name :</string>
    <string name="village_name">Village name :</string>
    <string name="check_enrollment_number">Check Enrollment Number</string>
    <string name="enter_enrollment_number">Enter enrollment number</string>
    <string name="create_profile">Create Profile</string>
    <string name="clear_data">Clear data</string>
    <string name="push_data">Push Data</string>
    <string name="subject">Subject :</string>
    <string name="topic">Topic :</string>
    <string name="out_of_marks">Out of marks :</string>
    <string name="marks_obtained">Marks obtained :</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="image">Image : </string>
    <string name="please_download_language_packs_offline_for_better_performance">Please download language packs offline for better performance</string>
    <string name="record_audio">Record Audio</string>
    <string name="your_answer">Your answer</string>
    <string name="can_do">Can do</string>
    <string name="need_help">Need help</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="capture_image">Capture image</string>
    <string name="show_images">show images</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="you_answered">You answered</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="answer">Answer</string>
    <string name="view_answer">View Answer</string>
    <string name="age_3_to_6">Age 3 to 6</string>
    <string name="age_8_to_14">Age 8 to 14</string>
    <string name="start_assessment">Start Assessment</string>
    <string name="update_topics">Update topics</string>
    <string name="true_">TRUE</string>
    <string name="false_">FALSE</string>
    <string name="capture_video">Capture Video</string>
    <string name="welcome">Welcome</string>
    <string name="save">Save</string>
    <string name="answered">Answered</string>
    <string name="not_answered">Not answered</string>
    <string name="topics">topics</string>
    <string name="clear_changes">Clear changes</string>
    <string name="or">OR</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="Media_download_failed">Media download failed..!</string>
    <string name="skip_all">Skip All</string>
    <string name="skip_this">Skip this</string>
    <string name="data_push_failed">Data push failed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="do_you_want_to_leave_assessment">Do you want to leave assessment?</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="view_option">View Option</string>
    <string name="data_copying_failed">Data Copying Failed!! Please re-insert the OTG</string>
    <string name="video">Video</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="watch_the_video">Watch the video</string>
    <string name="skip">Skip</string>
    <string name="papers_pushed">Papers pushed:</string>
    <string name="media_pushed">Media pushed:</string>
    <string name="audio">Audio</string>
    <string name="update">Update</string>
    <string name="this_app_version_is_older_please_update_the_app">This app version is older.\n Please update the app.</string>
    <string name="invalid_qr_code">Invalid QR Code !!!</string>
    <string name="no_certificates">No Certificates..</string>
    <string name="nothing_to_pull">Nothing to pull..</string>
    <string name="error_in_loading_check_internet_connection">Error in loading..Check internet connection</string>
    <string name="no_exams">No exams.</string>
    <string name="no_subjects">No subjects..</string>
    <string name="updated">Updated</string>
    <string name="please_select_group">Please select Group !</string>
    <string name="please_select_students">Please Select Students !</string>
    <string name="give_camera_permissions">Give Camera permissions through settings and restart the app.</string>
    <string name="no_groups_assigned">No groups assigned..</string>
    <string name="please_select_village">Please Select village</string>
    <string name="no_images">No images</string>
    <string name="give_storage_permissions">Give Storage permissions through settings and restart the app.</string>
    <string name="no_states">No states..</string>
    <string name="connect_to_internet_to_download_languages">Connect to internet to download languages</string>
    <string name="no_data">No data</string>
    <string name="select_language">Select language</string>
    <string name="please_fil_all_the_details">Please fill all the details..</string>
    <string name="profile_created_successfully">Profile created Successfully..</string>
</resources>