<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_weight="4"
        android:padding="8dp">

        <RelativeLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/rg_programs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbtn_hybrid_learning"
                    style="@style/CustomRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hybrid_learning" />

                <RadioButton
                    android:id="@+id/rbtn_readindia"
                    style="@style/CustomRadioButton"
                    android:text="@string/read_india" />

                <RadioButton
                    android:id="@+id/rbtn_second_chance"
                    style="@style/CustomRadioButton"
                    android:enabled="true"
                    android:text="@string/second_chance" />

                <RadioButton
                    android:id="@+id/rbtn_ece"
                    style="@style/CustomRadioButton"
                    android:enabled="true"
                    android:text="@string/ECE" />

                <RadioButton
                    android:id="@+id/rbtn_pratham_institute"
                    style="@style/CustomRadioButton"
                    android:text="@string/pratham_institute" />

                <RadioButton
                    android:id="@+id/rbtn_urbanProgram"
                    style="@style/CustomRadioButton"
                    android:text="@string/urbon_program" />
            </RadioGroup>

            <!-- <Spinner
                 android:id="@+id/spinner_village"
                 style="@style/spinner_style"
                 android:background="@drawable/gradient_spinner_selectprogram"
                 android:layout_width="350dp"
                 android:layout_height="50dp"
                 android:layout_below="@id/spinner_LL"
                 android:entries="@array/village"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp" />

             <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:layout_below="@id/spinner_village" />-->

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_230sdp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="20dp">

        <Spinner
            android:id="@+id/programSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="Select State"
            android:background="@drawable/gradient_spinner"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="Select State"
            android:background="@drawable/gradient_spinner"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/blockSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autofillHints="Select Block"
            android:background="@drawable/gradient_spinner" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout" android:layout_centerInParent="true">

        <Button
            android:id="@+id/save_button"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ripple_effect"
            android:text="@string/save" />
    </RelativeLayout>
</RelativeLayout>