<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="@dimen/_240sdp"
    android:layout_height="@dimen/_230sdp"
    android:layout_gravity="center"
    android:background="@drawable/main_card_bg"
    android:paddingBottom="@dimen/_15sdp">

    <ImageView
        android:id="@+id/dia_img"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/no_usage_data"
        android:visibility="visible" />

    <TextView
        android:id="@+id/dia_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/dia_img"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_3sdp"
        android:text="@string/what_do_you_want_to_do"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold|italic" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dia_title"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/dia_btn_restart"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:elevation="5dp"
            android:text="@string/restart"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/dia_btn_exit"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"

            android:background="@drawable/ripple_effect"
            android:elevation="5dp"
            android:text="@string/exit"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/dia_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/ripple_effect"
            android:elevation="5dp"
            android:text="@string/cancel"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/exit_ib"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_alignParentRight="true"
        android:padding="@dimen/_3sdp"
        android:scaleType="fitCenter"
        android:visibility="gone" />


</RelativeLayout>