<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.choose_assessment.result.ThankYouFragment">

    <RelativeLayout
        android:id="@+id/rl_thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/name"
            android:layout_margin="@dimen/_10sdp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <ImageView
            android:id="@+id/iv_img"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_15sdp"
            android:layout_below="@+id/tv_name"
            android:src="@drawable/thank_you" />




        <TextView
            android:id="@+id/tv_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_img"
            android:layout_margin="@dimen/_5sdp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/thank_you_for_giving_assessment"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/tv_thanks"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/ripple_effect_save_btn"
            android:padding="@dimen/_3sdp"
            android:text="@string/ok"
            android:textSize="@dimen/_15sdp" />

    </RelativeLayout>

</FrameLayout>