<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/subjects_bg"
    tools:context=".CatchoActivity">

    <TextView
        android:id="@+id/tv_Topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/quicksand_bold"
        android:textAlignment="center"
        android:text="@string/oops_something_went_wrong"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_Topic_"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_Topic"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/sorry_about_that_press_the_report_button_to_send_the_error_to_us"
        android:textAlignment="center"
        android:textColor="@color/colorBtnRedLight"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_Topic"
        tools:layout_editor_absoluteX="40dp" />


    <Button
        android:id="@+id/catcho_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_Topic_"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/red_button"
        android:elevation="@dimen/_5sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/report"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Topic_" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/catcho_img"
        app:layout_constraintBottom_toBottomOf="parent"></RelativeLayout>
</android.support.constraint.ConstraintLayout>