<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/custom_edit_text"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/push_lottie"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_new.json"
        app:lottie_loop="true" />

    <RelativeLayout
        android:id="@+id/rl_text"
        android:layout_below="@+id/push_lottie"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_push_dialog_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="@string/please_wait_pushing_data"
            android:textColor="@color/green"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txt_push_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:text="@string/check_your_wifi_is_connected_to_pratham_kolibri"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12sdp"
            android:visibility="gone" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_btn"
        android:layout_below="@+id/rl_text"
        android:paddingTop="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/ok_btn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:visibility="visible"
            android:background="@drawable/gradiance_bg_3"
            android:layout_marginBottom="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"/>

        <Button
            android:id="@+id/eject_btn"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="wrap_content"
            android:text="@string/eject_otg"
            android:visibility="visible"
            android:background="@drawable/gradiance_bg_5"
            android:layout_marginBottom="@dimen/_15sdp"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:elevation="@dimen/_5sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:layout_toEndOf="@id/ok_btn"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>