<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardElevation="0dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_2sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_question"
            style="@style/CustomQuestionStyle"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="0.4"
            app:autoSizeMaxTextSize="@dimen/_20sdp"
            app:autoSizeMinTextSize="@dimen/_15sdp"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/btn_view_hint"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight=".1"
            android:background="@drawable/correct_bg"
            android:elevation="@dimen/_2sdp"
            android:padding="@dimen/_3sdp"
            android:text="@string/view_hint"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:id="@+id/iv_question_image"
            style="@style/CustomQuestionImageStyle"
            android:layout_gravity="center"
            android:layout_weight="0.5" />

        <com.pratham.assessment.custom.gif_viewer.GifView
            android:id="@+id/iv_question_gif"
            style="@style/CustomQuestionImageStyle"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5" />

        <ImageView
            android:id="@+id/captured_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="0.8"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_2sdp"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/btn_capture_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:gravity="center"
                android:padding="@dimen/_7sdp"
                android:text="@string/capture_image"
                android:textSize="@dimen/_13sdp" />

            <Button
                android:id="@+id/btn_show_captured_img"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/ripple_effect"
                android:gravity="center"
                android:visibility="gone"
                android:padding="@dimen/_7sdp"
                android:text="@string/show_images"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>